Final fixes, ready to submit to chase

--- a/src/app.html
+++ b/src/app.html
@@ -5,16 +5,23 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<meta property="og:title" content="Book a meeting | Powered by BadGifter" />
-	<meta property="og:description" content="A simple calendar to book meetings with Acme. " />
-	<meta property="og:url" content="https://book-me.vercel.me" />
-	<meta property="og:type" content="website" />
-	<meta property="og:image" content="/og-image.png" />
-	<meta property="og:image:alt" content="Calendar app" />
-	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:title" content="Book a meeting | Powered by BadGifter" />
-	<meta name="twitter:description" content="A simple calendar to book meetings with Acme. " />
-	<meta name="twitter:image" content="/og-image.png" />
+	<title>Book a meeting | Powered by BadGifter</title>
+	<meta name="description" content="A simple calendar to book meetings with Acme. ">
+
+	<!-- Facebook Meta Tags -->
+	<meta property="og:url" content="https://book-me-six.vercel.app">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Book a meeting | Powered by BadGifter">
+	<meta property="og:description" content="A simple calendar to book meetings with Acme. ">
+	<meta property="og:image" content="https://book-me-six.vercel.app/og-image.png">
+
+	<!-- Twitter Meta Tags -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta property="twitter:domain" content="book-me-six.vercel.app">
+	<meta property="twitter:url" content="https://book-me-six.vercel.app">
+	<meta name="twitter:title" content="Book a meeting | Powered by BadGifter">
+	<meta name="twitter:description" content="A simple calendar to book meetings with Acme. ">
+	<meta name="twitter:image" content="https://book-me-six.vercel.app/og-image.png">
 
 	%sveltekit.head%
 </head>
